--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,11 @@
 set -g default-terminal "screen-256color"
 setw -g mode-mouse on
 
+##CLIPBOARD selection integration
+##Requires prefix key before the command key
+#Copy tmux paste buffer to CLIPBOARD
+bind C-c run "tmux show-buffer | xclip -i -selection clipboard"
+#Copy CLIPBOARD to tmux paste buffer and paste tmux paste buffer
+bind C-v run "tmux set-buffer -- \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
+
+setw -g aggressive-resize on
