Add some useful config options for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,21 @@
+# Tmuk config
+# Useful sources
+# http://justinlilly.com/dotfiles/tmux.html
+# http://www.rdegges.com/tools-i-use-tmux/
+
 set -g default-terminal "screen-256color"
 setw -g mode-mouse on
+set-option -g mouse-select-pane on
+
+set-option -g set-titles on
+set-option -g set-titles-string '#H:#S.#I.#P #W #T'
+
+set-option -g bell-action any
+set-option -g visual-bell off
+
+set -g base-index 1
+setw -g history-limit 100000
+
 
 ##CLIPBOARD selection integration
 ##Requires prefix key before the command key
@@ -7,5 +23,12 @@ setw -g mode-mouse on
 bind C-c run "tmux show-buffer | xclip -i -selection clipboard"
 #Copy CLIPBOARD to tmux paste buffer and paste tmux paste buffer
 bind C-v run "tmux set-buffer -- \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
+
+bind-key | split-window -h
+bind-key - split-window -v
+bind-key r source-file ~/.tmux.conf
+
+bind-key S command-prompt -p ssh: "new-window -n %1 'ssh %1'"
+
 
 setw -g aggressive-resize on
