Fix tmux locking up after X copy

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,7 +20,7 @@ setw -g history-limit 100000
 ##CLIPBOARD selection integration
 ##Requires prefix key before the command key
 #Copy tmux paste buffer to CLIPBOARD
-bind C-c run "tmux show-buffer | xclip -i -selection clipboard"
+bind C-c run "tmux show-buffer | xclip -i -selection clipboard > /dev/null"
 #Copy CLIPBOARD to tmux paste buffer and paste tmux paste buffer
 bind C-v run "tmux set-buffer -- \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
 
@@ -30,5 +30,6 @@ bind-key r source-file ~/.tmux.conf
 
 bind-key S command-prompt -p ssh: "new-window -n %1 'ssh %1'"
 
-
 setw -g aggressive-resize on
+
+#source '/usr/share/tmux/powerline.conf'
