Update powerline, runonce

--- a/links/.tmux.conf
+++ b/links/.tmux.conf
@@ -32,4 +32,4 @@ bind-key S command-prompt -p ssh: "new-window -n %1 'ssh %1'"
 
 setw -g aggressive-resize on
 
-#source '/usr/share/tmux/powerline.conf'
+source '/usr/share/tmux/powerline.conf'
