Tmux config tweaks

--- a/links/.tmux.conf
+++ b/links/.tmux.conf
@@ -4,15 +4,19 @@
 # http://www.rdegges.com/tools-i-use-tmux/
 
 set -g default-terminal "screen-256color"
+
+# Mouse
 setw -g mode-mouse on
 set-option -g mouse-select-pane on
-
+# Windows titles
 set-option -g set-titles on
 set-option -g set-titles-string '#H:#S.#I.#P #W #T'
 
+# Bell
 set-option -g bell-action any
 set-option -g visual-bell off
-
+# Window lists
+set-option -g renumber-windows on
 set -g base-index 1
 setw -g history-limit 100000
 
@@ -24,12 +28,17 @@ bind C-c run "tmux show-buffer | xclip -i -selection clipboard > /dev/null"
 #Copy CLIPBOARD to tmux paste buffer and paste tmux paste buffer
 bind C-v run "tmux set-buffer -- \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
 
+# Fancy split keys
 bind-key | split-window -h
 bind-key - split-window -v
 bind-key r source-file ~/.tmux.conf
 
+# SSH
 bind-key S command-prompt -p ssh: "new-window -n %1 'ssh %1'"
 
 setw -g aggressive-resize on
 
 source '/usr/share/tmux/powerline.conf'
+set -g status-interval 1
+
+# vim: ft=tmux
