Tmux config tweaks

--- a/links/.tmux.conf
+++ b/links/.tmux.conf
@@ -35,6 +35,7 @@ bind-key r source-file ~/.tmux.conf
 
 # SSH
 bind-key S command-prompt -p ssh: "new-window -n %1 'ssh %1'"
+bind-key M new-window -n mail 'mutt'
 
 setw -g aggressive-resize on
 
