Fix up some long-standing issues and clean up various config bits

--- a/links/.tmux.conf
+++ b/links/.tmux.conf
@@ -39,7 +39,20 @@ bind-key M new-window -n mail 'mutt'
 
 setw -g aggressive-resize on
 
-source '/usr/share/tmux/powerline.conf'
-set -g status-interval 1
+# Status bar stuff ripped from powerline config
+set -g status on
+set -g status-utf8 on
+set -g status-interval 2
+set -g status-left-length 20
+
+set -g window-status-format "#[fg=colour244,bg=colour234]#I #[fg=colour240] #[default]#W "
+set -g window-status-current-format "#[fg=colour234,bg=colour31]#[fg=colour117,bg=colour31] #I  #[fg=colour231,bold]#W #[fg=colour31,bg=colour234,nobold]"
+set -qg status-style fg=colour231,bg=colour234
+set -qg window-status-last-style fg=colour31
+set-window-option -qg window-status-style fg=colour249
+set-window-option -qg window-status-activity-style fg=yellow,none
+set-window-option -qg window-status-bell-style fg=red,none
+set -qg status-left '#{?client_prefix,#[fg=colour254]#[bg=colour31]#[bold],#[fg=colour16]#[bg=colour254]#[bold]} #S #{?client_prefix,#[fg=colour31]#[bg=colour234]#[nobold],#[fg=colour254]#[bg=colour234]#[nobold]}'
+#--end powerline rip
 
 # vim: ft=tmux
