--- a/links/.i3/config
+++ b/links/.i3/config
@@ -36,8 +36,8 @@ bar {
 
 workspace_auto_back_and_forth yes
 
-for_window [class="^st-256color$"] exec transset-df -a 0.8
-for_window [class="ĵetbrains-idea$"] focus child, layout stacking, focus
+for_window [class="st-256color"] exec transset-df -a 0.8
+for_window [class="^jetbrains-idea$"] focus child, layout stacking, focus
 
 # {{{ Keyboard shortcuts
 
