--- a/links/.i3/config
+++ b/links/.i3/config
@@ -35,6 +35,7 @@ bar {
 }
 
 workspace_auto_back_and_forth yes
+#rename workspace 1 to "1: www"
 
 for_window [class="st-256color"] exec transset-df -a 0.8
 for_window [class="^jetbrains-idea$"] focus child, layout stacking, focus
