Make window close shortcut make more sense

--- a/links/.i3/config
+++ b/links/.i3/config
@@ -55,7 +55,7 @@ bindsym XF86AudioRaiseVolume exec pulseaudio-ctl up
 # }}}
 
 # kill focused window
-bindsym $mod+Shift+dead_acute kill
+bindsym $mod+Shift+period kill
 
 # start dmenu (a program launcher)
 bindsym $mod+period exec dmenu_run # or exec --no-startup-id i3-dmenu-desktop
@@ -128,7 +128,7 @@ bindsym $mod+Shift+j reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+p restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+period exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+dead_acute exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # }}}
 
