--- a/links/.config/gtk-3.0/settings.ini
+++ b/links/.config/gtk-3.0/settings.ini
@@ -1,3 +1,3 @@
 [Settings]
-gtk-theme-name = MediterraneanLight
-gtk-icon-theme-name = Tango
+gtk-theme-name = Libra
+gtk-icon-theme-name = Numix-Light
