--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "links/.vim/bundle/salt-vim"]
 	path = links/.vim/bundle/salt-vim
 	url = https://github.com/saltstack/salt-vim.git
+[submodule "links/.vim/bundle/vim-gitgutter"]
+	path = links/.vim/bundle/vim-gitgutter
+	url = git://github.com/airblade/vim-gitgutter.git
