--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "links/.vim/bundle/vim-gitgutter"]
 	path = links/.vim/bundle/vim-gitgutter
 	url = git://github.com/airblade/vim-gitgutter.git
+[submodule "links/.vim/bundle/YouCompleteMe"]
+	path = links/.vim/bundle/YouCompleteMe
+	url = https://github.com/Valloric/YouCompleteMe.git
