--- a/links/.config/fontconfig/fonts.conf
+++ b/links/.config/fontconfig/fonts.conf
@@ -7,5 +7,20 @@
       <family>Inconsolata for Powerline</family>
     </prefer>
   </alias>
+  <alias>
+    <family>serif</family>
+    <prefer>
+      <family>Heuristica</family>
+    </prefer>
+  </alias>
+  <match target="font">
+    <test name="family">
+      <string>Inconsolata for Powerline</string>
+    </test>
+    <edit name="fontfeatures" mode="append">
+        <string>calt</string>
+        <string>liga</string>
+    </edit>
+  </match>
  <dir>~/.local/share/fonts</dir>
 </fontconfig>
