--- a/links/.tmux.conf
+++ b/links/.tmux.conf
@@ -6,8 +6,8 @@
 set -g default-terminal "screen-256color"
 
 # Mouse
-setw -g mode-mouse on
-set-option -g mouse-select-pane on
+setw -g mouse on
+set-option -g mouse on
 # Windows titles
 set-option -g set-titles on
 set-option -g set-titles-string '#H:#S.#I.#P #W #T'
