--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,9 @@
 [submodule "links/.vim/bundle/vim-airline-themes"]
 	path = links/.vim/bundle/vim-airline-themes
 	url = https://github.com/vim-airline/vim-airline-themes.git
+[submodule "links/.vim/bundle/unite.vim"]
+	path = links/.vim/bundle/unite.vim
+	url = https://github.com/Shougo/unite.vim.git
+[submodule "links/.vim/bundle/vison"]
+	path = links/.vim/bundle/vison
+	url = https://github.com/Quramy/vison.git
