--- a/.gitmodules
+++ b/.gitmodules
@@ -1,72 +1,72 @@
-[submodule "links/.vim/bundle/syntastic"]
-	path = links/.vim/bundle/syntastic
+[submodule "links/.config/nvim/bundle/syntastic"]
+	path = links/.config/nvim/bundle/syntastic
 	url = git://github.com/scrooloose/syntastic.git
 [submodule "links/.zsh/plugins/zsh-syntax-highlighting"]
 	path = links/.zsh/plugins/zsh-syntax-highlighting
 	url = git://github.com/zsh-users/zsh-syntax-highlighting.git
-[submodule "links/.vim/bundle/vim-jinja"]
-	path = links/.vim/bundle/vim-jinja
+[submodule "links/.config/nvim/bundle/vim-jinja"]
+	path = links/.config/nvim/bundle/vim-jinja
 	url = git://github.com/lepture/vim-jinja.git
-[submodule "links/.vim/bundle/neocomplete"]
-	path = links/.vim/bundle/neocomplete
+[submodule "links/.config/nvim/bundle/neocomplete"]
+	path = links/.config/nvim/bundle/neocomplete
 	url = git://github.com/Shougo/neocomplete.vim.git
-[submodule "links/.vim/bundle/vim-afterimage"]
-	path = links/.vim/bundle/vim-afterimage
+[submodule "links/.config/nvim/bundle/vim-afterimage"]
+	path = links/.config/nvim/bundle/vim-afterimage
 	url = git://github.com/tpope/vim-afterimage.git
-[submodule "links/.vim/bundle/vim-eunuch"]
-	path = links/.vim/bundle/vim-eunuch
+[submodule "links/.config/nvim/bundle/vim-eunuch"]
+	path = links/.config/nvim/bundle/vim-eunuch
 	url = git://github.com/tpope/vim-eunuch.git
-[submodule "links/.vim/bundle/zenburn"]
-	path = links/.vim/bundle/zenburn
+[submodule "links/.config/nvim/bundle/zenburn"]
+	path = links/.config/nvim/bundle/zenburn
 	url = git://github.com/jnurmine/Zenburn.git
 [submodule "links/texmf/tex/latex/mla13"]
 	path = links/texmf/tex/latex/mla13
 	url = git://github.com/jackson13info/mla13.git
-[submodule "links/.vim/bundle/vim-airline"]
-	path = links/.vim/bundle/vim-airline
+[submodule "links/.config/nvim/bundle/vim-airline"]
+	path = links/.config/nvim/bundle/vim-airline
 	url = git://github.com/bling/vim-airline.git
-[submodule "links/.vim/bundle/tmuxline.vim"]
-	path = links/.vim/bundle/tmuxline.vim
+[submodule "links/.config/nvim/bundle/tmuxline.vim"]
+	path = links/.config/nvim/bundle/tmuxline.vim
 	url = git://github.com/edkolev/tmuxline.vim.git
-[submodule "links/.vim/bundle/promptline.vim"]
-	path = links/.vim/bundle/promptline.vim
+[submodule "links/.config/nvim/bundle/promptline.vim"]
+	path = links/.config/nvim/bundle/promptline.vim
 	url = git://github.com/edkolev/promptline.vim.git
-[submodule "links/.vim/bundle/rust.vim"]
-	path = links/.vim/bundle/rust.vim
+[submodule "links/.config/nvim/bundle/rust.vim"]
+	path = links/.config/nvim/bundle/rust.vim
 	url = https://github.com/wting/rust.vim.git
-[submodule "links/.vim/bundle/salt-vim"]
-	path = links/.vim/bundle/salt-vim
+[submodule "links/.config/nvim/bundle/salt-vim"]
+	path = links/.config/nvim/bundle/salt-vim
 	url = https://github.com/saltstack/salt-vim.git
-[submodule "links/.vim/bundle/vim-gitgutter"]
-	path = links/.vim/bundle/vim-gitgutter
+[submodule "links/.config/nvim/bundle/vim-gitgutter"]
+	path = links/.config/nvim/bundle/vim-gitgutter
 	url = git://github.com/airblade/vim-gitgutter.git
-[submodule "links/.vim/bundle/YouCompleteMe"]
-	path = links/.vim/bundle/YouCompleteMe
+[submodule "links/.config/nvim/bundle/YouCompleteMe"]
+	path = links/.config/nvim/bundle/YouCompleteMe
 	url = https://github.com/Valloric/YouCompleteMe.git
-[submodule "links/.vim/bundle/calendar.vim"]
-	path = links/.vim/bundle/calendar.vim
+[submodule "links/.config/nvim/bundle/calendar.vim"]
+	path = links/.config/nvim/bundle/calendar.vim
 	url = https://github.com/itchyny/calendar.vim
 [submodule "links/makefile-templates"]
 	path = links/makefile-templates
 	url = git@github.com:zml2008/makefile-templates.git
-[submodule "links/.vim/bundle/kotlin-vim"]
-	path = links/.vim/bundle/kotlin-vim
+[submodule "links/.config/nvim/bundle/kotlin-vim"]
+	path = links/.config/nvim/bundle/kotlin-vim
 	url = https://github.com/udalov/kotlin-vim
-[submodule "links/.vim/bundle/vim-easy-align"]
-	path = links/.vim/bundle/vim-easy-align
+[submodule "links/.config/nvim/bundle/vim-easy-align"]
+	path = links/.config/nvim/bundle/vim-easy-align
 	url = https://github.com/junegunn/vim-easy-align.git
-[submodule "links/.vim/bundle/vim-airline-themes"]
-	path = links/.vim/bundle/vim-airline-themes
+[submodule "links/.config/nvim/bundle/vim-airline-themes"]
+	path = links/.config/nvim/bundle/vim-airline-themes
 	url = https://github.com/vim-airline/vim-airline-themes.git
-[submodule "links/.vim/bundle/unite.vim"]
-	path = links/.vim/bundle/unite.vim
+[submodule "links/.config/nvim/bundle/unite.vim"]
+	path = links/.config/nvim/bundle/unite.vim
 	url = https://github.com/Shougo/unite.vim.git
-[submodule "links/.vim/bundle/vison"]
-	path = links/.vim/bundle/vison
+[submodule "links/.config/nvim/bundle/vison"]
+	path = links/.config/nvim/bundle/vison
 	url = https://github.com/Quramy/vison.git
-[submodule "links/.vim/bundle/vim-latex"]
-	path = links/.vim/bundle/vim-latex
+[submodule "links/.config/nvim/bundle/vim-latex"]
+	path = links/.config/nvim/bundle/vim-latex
 	url = https://github.com/vim-latex/vim-latex.git
-[submodule "links/.vim/bundle/vimwiki"]
-	path = links/.vim/bundle/vimwiki
+[submodule "links/.config/nvim/bundle/vimwiki"]
+	path = links/.config/nvim/bundle/vimwiki
 	url = https://github.com/vimwiki/vimwiki.git
