Some things that also need to use nvim

--- a/links/.tmux.conf
+++ b/links/.tmux.conf
@@ -39,7 +39,7 @@ bind-key M new-window -n mail 'mutt'
 
 setw -g aggressive-resize on
 
-run-shell 'vim -c "TmuxlineSnapshot! ~/.tmuxline.conf" -c ":q"'
+run-shell 'nvim -c "TmuxlineSnapshot! ~/.tmuxline.conf" -c ":q"'
 source ~/.tmuxline.conf
 
 # vim: ft=tmux
