--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "links/.config/nvim/bundle/vimwiki"]
 	path = links/.config/nvim/bundle/vimwiki
 	url = https://github.com/vimwiki/vimwiki.git
+[submodule "links/.config/nvim/bundle/vim-nix"]
+	path = links/.config/nvim/bundle/vim-nix
+	url = https://github.com/LnL7/vim-nix.git
