Update to non-infinality font names

--- a/links/.config/fontconfig/fonts.conf
+++ b/links/.config/fontconfig/fonts.conf
@@ -4,7 +4,7 @@
   <alias>
     <family>monospace</family>
     <prefer>
-      <family>Inconsolata for Powerline</family>
+      <family>Inconsolata</family>
     </prefer>
   </alias>
   <alias>
@@ -15,7 +15,7 @@
   </alias>
   <match target="font">
     <test name="family">
-      <string>Inconsolata for Powerline</string>
+      <string>Inconsolata</string>
     </test>
     <edit name="fontfeatures" mode="append">
         <string>calt</string>
