--- a/links/.config/fontconfig/fonts.conf
+++ b/links/.config/fontconfig/fonts.conf
@@ -8,6 +8,12 @@
     </prefer>
   </alias>
   <alias>
+    <family>sans-serif</family>
+    <prefer>
+      <family>Noto Sans UI</family>
+    </prefer>
+  </alias>
+  <alias>
     <family>serif</family>
     <prefer>
       <family>Heuristica</family>
