--- a/links/.i3/config
+++ b/links/.i3/config
@@ -14,7 +14,7 @@ set $mod Mod4
 # is used in the bar {} block below.
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:monospace 8
+font pango:sans 10
 
 hide_edge_borders smart
 
@@ -39,7 +39,7 @@ set $unfocused_bg #3B2929
 set $urgent_fg #FFFFFF
 set $urgent_bg #744E8F
 set $bar_bg #2F0303
-set $bar_fg #FFFFFF
+set $bar_fg #CCCCCC
 
 # colorclass border background text indicator
 # default indicator is #2e9ef4
@@ -64,6 +64,7 @@ bar {
             inactive_workspace $unfocused_bg $unfocused_bg $unfocused_fg
             urgent_workspace $urgent_bg $urgent_bg $urgent_fg
         }
+        font pango:sans 9
 
         status_command python3 ~/.i3/status.py
         tray_output primary
@@ -76,6 +77,7 @@ workspace_auto_back_and_forth yes
 for_window [class="Termite"] exec transset-df -a 0.8
 for_window [class="glowing-bear.github.io__glowing-bear"] exec transset-df -a 0.95
 for_window [class="^jetbrains-idea$"] focus child, layout stacking, focus
+for_window [class="^pinentry-gtk-2$"] floating enable
 for_window [window_role="bubble"] floating enable
 for_window [window_role="scratchpad"] move scratchpad
 
