--- a/links/.config/gtk-2.0/gtkfilechooser.ini
+++ b/links/.config/gtk-2.0/gtkfilechooser.ini
@@ -1,5 +1,5 @@
 [Filechooser Settings]
-LastFolderUri=file:///home/zach
+LastFolderUri=file:///home/zml
 LocationMode=path-bar
 ShowHidden=true
 ShowSizeColumn=true
