--- a/links/.i3/config
+++ b/links/.i3/config
@@ -74,12 +74,12 @@ bar {
 workspace_auto_back_and_forth yes
 #rename workspace 1 to "1: www"
 
-for_window [class="Termite"] exec transset-df -a 0.8
+for_window [class="Alacritty"] exec transset-df -a 0.8
 for_window [class="glowing-bear.github.io__glowing-bear"] exec transset-df -a 0.95
 for_window [class="^jetbrains-idea$"] focus child, layout stacking, focus
 for_window [class="^pinentry-gtk-2$"] floating enable
 for_window [window_role="bubble"] floating enable
-for_window [window_role="scratchpad"] move scratchpad
+for_window [class="scratchpad"] move scratchpad
 
 bindsym $mod+minus scratchpad show
 
@@ -182,7 +182,7 @@ bindsym $mod+Shift+p restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+dead_acute exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
-# }}} 
+# }}}
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
