--- a/links/.tmux.conf
+++ b/links/.tmux.conf
@@ -4,6 +4,7 @@
 # http://www.rdegges.com/tools-i-use-tmux/
 
 set -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc" # force truecolor support
 
 # Mouse
 setw -g mouse on
@@ -19,6 +20,9 @@ set-option -g visual-bell off
 set-option -g renumber-windows on
 set -g base-index 1
 setw -g history-limit 100000
+
+# prevent escape delay
+set -s escape-time 0
 
 
 ##CLIPBOARD selection integration
