--- a/links/.gnupg/gpg.conf
+++ b/links/.gnupg/gpg.conf
@@ -3,5 +3,5 @@ personal-digest-preferences SHA512
 cert-digest-algo SHA512
 default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
 use-agent
-keyserver hkps://hkps.pool.sks-keyservers.net
+keyserver hkps://keys.openpgp.org 
 keyserver-options auto-key-retrieve
