--- a/links/.tmux.conf
+++ b/links/.tmux.conf
@@ -28,9 +28,9 @@ set -s escape-time 0
 ##CLIPBOARD selection integration
 ##Requires prefix key before the command key
 #Copy tmux paste buffer to CLIPBOARD
-bind C-c run "tmux show-buffer | xclip -i -selection clipboard > /dev/null"
+bind C-c run "tmux show-buffer | wl-copy > /dev/null"
 #Copy CLIPBOARD to tmux paste buffer and paste tmux paste buffer
-bind C-v run "tmux set-buffer -- \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
+bind C-v run "tmux set-buffer -- \"$(wl-paste)\"; tmux paste-buffer"
 
 # Fancy split keys
 bind-key | split-window -h
